# archon_ai

./: .env.example  .gitignore  AGENTS.md  COMMANDS.md  Dockerfile  Dockerfile.dev  GATEWAY_INTEGRATION.md  META_AGENT_V3_ROADMAP.md  Makefile  NEXT_SESSION.md  QUANT_BOT_QUICKSTART.md  README.md  SECURITY_IMPROVEMENTS.md  SETUP_GATEWAY.md  TELEGRAM_INTEGRATION_STATUS.md  check_env.py  docker-compose.dev.yml  docker-compose.fullstack.yml  docker-compose.yml  openclaw_config.json5  pyproject.toml  run_quant_bot.py  setup_from_env.py  setup_quant_bot.py  test_gateway.py  test_real_messages.py
deploy/docker/: Dockerfile  agent-seccomp.json
docs/: 1.md  2.md  3.md  4.md  5.md  6.md  7.md  8.md  CONTRIBUTING.md  DEVELOPER_GUIDE.md  README.md  completed_work.md  meta_agent_analysis.md  telegram_bot_guide.md  testing.md  vision.md
docs/adr/: ADR-0001-enterprise-integration.md  ADR-0002-execution-chokepoint.md  ADR-0003-security-review.md  ADR-0005-kernel-rfc.md  ADR-0006-debate-pipeline.md  ADR-0007-implementation-priorities.md  README.md
docs/development/: security-improvements.md
docs/getting-started/: environment.md  quick-start.md  telegram-bot.md
docs/integration/: gateway.md  status.md
docs/reference/: api.md  commands.md
enterprise/: __init__.py  audit_logger.py  config.py  event_bus.py  execution_contract.py  gateway_bridge.py  main.py  openclaw_integration.py  rbac.py
enterprise/api/: __init__.py  main.py
kernel/: __init__.py  ast_sanitizer.py  dynamic_circuit_breaker.py  execution_kernel.py  formal_invariants.py  intent_contract.py  invariants.py  middleware.py  openclaw_integration.py  trading_contracts.py  validation.py  verification_metrics.py
kernel/manifests/: __init__.py  loader.py
manifests/: operations.json
manifests/environments/: dev.json  prod.json  test.json
mat/: __init__.py  agent_scoreboard.py  chaos_engine.py  circuit_breaker.py  debate_pipeline.py  llm_router.py  project_curator.py  siege_mode.py
mat/agency_templates/: __init__.py  index.json  safety_core.txt  template_loader.py
mat/agency_templates/roles/: _base.json  auditor.json  builder.json  database_architect.json  devops_engineer.json  performance_guru.json  security_expert.json  skeptic.json  ux_researcher.json
openclaw/: __init__.py  channels.py  gateway.py  gateway_v3.py
scripts/: check_env.py  check_imports.py  run_quant_bot.py  setup_from_env.py
tests/: __init__.py
tests/integration/: __init__.py  test_ast_sanitizer.py  test_chaos_injection.py  test_end_to_end.py  test_fast_path.py  test_formal_invariants.py  test_full_flow.py  test_intent_contract.py  test_kernel_integration.py  test_kernel_perf.py  test_openclaw_connection.py  test_openclaw_gateway.py  test_real_messages.py  test_trading_contracts.py
tests/unit/: test_ast_sanitizer.py  test_debate_pipeline.py  test_enhanced_invariants.py  test_event_bus.py  test_execution_kernel.py  test_validation.py
