[tool.poetry]
name = "archon-ai"
version = "0.1.0"
description = "Enterprise AI Operating System with T0-T3 security architecture, autonomous operations, and multi-channel support"
authors = ["ember6784 <ember6784@users.noreply.github.com>"]
readme = "README.md"
license = "MIT"
packages = [
    { include = "enterprise" },
    { include = "mat" },
    { include = "openclaw" },
    { include = "kernel" },
]

[tool.poetry.dependencies]
python = "^3.11"


# ============================================================================
# ASYNC & NETWORKING
# ============================================================================
websockets = "^14.1"
aiohttp = "^3.10.0"
aiofiles = "^24.1.0"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}


# ============================================================================
# STATE & CACHE
# ============================================================================
redis = {extras = ["hiredis"], version = "^5.0.7"}
aioredis = "^2.0.1"


# ============================================================================
# DATABASE
# ============================================================================
asyncpg = "^0.30.0"           # PostgreSQL async driver
sqlalchemy = "^2.0.38"         # ORM
alembic = "^1.14.0"           # Migrations


# ============================================================================
# LLM PROVIDERS
# ============================================================================
anthropic = "^0.39.0"
openai = "^1.63.0"


# ============================================================================
# SECURITY
# ============================================================================
pyjwt = "^2.10.0"
cryptography = "^44.0.0"
pynacl = "^1.5.0"  # For Ed25519 device signing
python-multipart = "^0.0.9"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-keycloak = "^4.7.0"    # SSO integration


# ============================================================================
# OBSERVABILITY
# ============================================================================
prometheus-client = "^0.21.0"
opentelemetry-api = "^1.25.0"
opentelemetry-sdk = "^1.25.0"
opentelemetry-instrumentation-aiohttp-client = "^0.49b0"
structlog = "^24.4.0"


# ============================================================================
# DATA PROCESSING
# ============================================================================
pydantic = "^2.9.0"
pydantic-settings = "^2.6.0"


# ============================================================================
# UTILITIES
# ============================================================================
python-dotenv = "^1.0.1"
click = "^8.1.7"
rich = "^13.9.4"
typer = "^0.12.3"


# ============================================================================
# DEV DEPENDENCIES
# ============================================================================
[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-asyncio = "^0.25.0"
pytest-cov = "^5.0.0"
pytest-mock = "^3.14.0"
httpx = "^0.27.0"
ruff = "^0.8.0"
mypy = "^1.14.0"
pre-commit = "^4.0.1"


[tool.poetry.group.load.dependencies]
locust = "^2.31.0"


# ============================================================================
# BUILD SYSTEM
# ============================================================================
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


# ============================================================================
# TOOL CONFIGURATIONS
# ============================================================================
[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["enterprise", "mat", "openclaw"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --cov=enterprise --cov=mat --cov-report=term-missing"

[tool.coverage.run]
source = ["enterprise", "mat"]
omit = ["*/tests/*", "*/test_*.py"]
